# inf2-material

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
run_scripts/: run-lecture.sh  run.sh
scribbles/: README.md
slides/: README.md
src/: CMakeLists.txt  cmakehelpers.cmake
src/examples/: CMakeLists.txt
src/examples/searching/: CMakeLists.txt
src/examples/searching/binarysearch/: CMakeLists.txt  binarysearch.cpp  binarysearch.h  binarysearch_examples.cpp  binarysearch_tests.cpp
src/examples/searching/linearsearch/: CMakeLists.txt  linearsearch.cpp  linearsearch.h  linearsearch_examples.cpp  linearsearch_tests.cpp
src/examples/sorting/: CMakeLists.txt
src/examples/sorting/bubblesort/: CMakeLists.txt  bubblesort.cpp  bubblesort.h  bubblesort_tests.cpp
src/examples/sorting/insertionsort/: CMakeLists.txt  insertionsort.cpp  insertionsort.h  insertionsort_tests.cpp
src/examples/sorting/selectionsort/: CMakeLists.txt  selectionsort.cpp  selectionsort.h  selectionsort_tests.cpp
src/lecture/: CMakeLists.txt
src/lecture/2024-05-03/helloworld/: CMakeLists.txt  functions.cpp  loops  loops.cpp
src/lecture/2024-05-03/searching/: CMakeLists.txt
src/lecture/2024-05-10/: CMakeLists.txt
src/lecture/2024-05-10/sorting/: CMakeLists.txt  bubblesort.cpp  bubblesort.h  insertionsort.cpp  selectionsort.cpp
src/lecture/2024-06-07/: CMakeLists.txt
src/lecture/2024-06-07/lists/: CMakeLists.txt  lists.cpp
src/lecture/helloworld/: CMakeLists.txt  hello.cpp
src/lecture/searching/: CMakeLists.txt  search.cpp
tools/: README.md  cmakehelpers.cmake  run.sh
(+2 files in other folders)
